--- a/scss/queries.scss
+++ b/scss/queries.scss
@@ -878,7 +878,6 @@
         line-height: 1.05;
       }
       &__second {
-        background-color: #921287;
         height: 96 / $width * 100vw;
         width: 480 / $width * 100vw;
         font-size: 14 / $width * 100vw;
@@ -1621,49 +1620,58 @@
   ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
   /**********SECTION HERO****************/
 
+  /*.section-hero {
+    max-width: 704 / $width * 100vw;
+  }*/
   .section-hero {
     max-width: 704 / $width * 100vw;
   }
 
   .hero {
+    flex-direction: column;
     margin: 0 auto;
     padding: 0 auto;
     &__img-box {
+      margin-top: 20 / $width * 100vw;
+      margin-left: 45 / $width * 100vw;
       &__img {
+        //height: 400 / $width * 100vw;
+        //width: 544 / $width * 100vw;
+        object-fit: cover;
+        width: 544 / $width * 100vw;
         height: 400 / $width * 100vw;
-        width: 540 / $width * 100vw;
       }
     }
     &__text-box {
       padding: 0 auto;
       &__primary {
-        height: 118 / $width * 100vw;
-        width: 250 / $width * 100vw;
+        height: 70 / $width * 100vw;
+        width: 544 / $width * 100vw;
         line-height: 39 / $width * 100vw;
         font-size: 32 / $width * 100vw;
-        margin-left: 35 / $width * 100vw;
-        margin-top: 40 / $width * 100vw;
-        margin-bottom: 20 / $width * 100vw;
+        margin-left: 45 / $width * 100vw;
+        margin-top: 20 / $width * 100vw;
+        margin-bottom: 5 / $width * 100vw;
       }
       &__tag-title {
         height: 20 / $width * 100vw;
-        width: 264 / $width * 100vw;
+        width: 544 / $width * 100vw;
         font-size: 12 / $width * 100vw;
         line-height: 16 / $width * 100vw;
-        margin-left: 35 / $width * 100vw;
-        margin-top: 20 / $width * 100vwx;
+        margin-left: 45 / $width * 100vw;
+        margin-top: 10 / $width * 100vwx;
       }
       &__description {
-        height: 168 / $width * 100vw;
-        width: 240 / $width * 100vw;
-        margin-left: 35 / $width * 100vw;
-        margin-bottom: 33 / $width * 100vw;
-        margin-top: 10 / $width * 100vw;
-        font-size: 12 / $width * 100vw;
-        line-height: 18 / $width * 100vw;
+        height: 140 / $width * 100vw;
+        width: 544 / $width * 100vw;
+        margin-left: 45 / $width * 100vw;
+        margin-bottom: 20 / $width * 100vw;
+        margin-top: 5 / $width * 100vw;
+        font-size: 18 / $width * 100vw;
+        line-height: 28 / $width * 100vw;
       }
       &__btn {
-        margin-left: 35 / $width * 100vw;
+        margin-left: 45 / $width * 100vw;
         padding: 12 / $width * 100vw 40 / $width * 100vw;
       }
     }
@@ -1673,13 +1681,13 @@
   /**********QUALITY****************/
   .mark-quality {
     max-width: 704 / $width * 100vw;
-    height: 130 / $width * 100vw;
+    height: 120 / $width * 100vw;
     padding: 0 auto;
     &__container {
       &__logos {
         img {
-          height: 120 / $width * 100vw;
-          width: 290 / $width * 100vw;
+          height: 110 / $width * 100vw;
+          width: 270 / $width * 100vw;
           margin-right: 10 / $width * 100vw;
         }
       }
@@ -1693,21 +1701,23 @@
   }
   .services {
     &__text-box {
+      flex-direction: column;
       &__first {
-        height: 63 / $width * 100vw;
+        display: flex;
+        justify-content: center;
+        height: 33 / $width * 100vw;
         width: 330 / $width * 100vw;
         letter-spacing: -0.5 / $width * 100vw;
         font-size: 34 / $width * 100vw;
         line-height: 1.05;
       }
       &__second {
-        background-color: #341292;
-        height: 96 / $width * 100vw;
-        width: 480 / $width * 100vw;
-        font-size: 12 / $width * 100vw;
-        margin-top: 45 / $width * 100vw;
-        margin-bottom: 60 / $width * 100vw;
-        line-height: 20 / $width * 100vw;
+        height: 140 / $width * 100vw;
+        width: 530 / $width * 100vw;
+        font-size: 18 / $width * 100vw;
+        margin-top: 15 / $width * 100vw;
+        margin-bottom: 30 / $width * 100vw;
+        line-height: 28 / $width * 100vw;
       }
     }
     &__gallery {
@@ -1731,7 +1741,7 @@
           &__tag {
             height: 30 / $width * 100vw;
             width: 189 / $width * 100vw;
-            font-size: 12 / $width * 100vw;
+            font-size: 14 / $width * 100vw;
             line-height: 20 / $width * 100vw;
           }
           img {
@@ -1755,20 +1765,20 @@
         &__primary {
           width: 535 / $width * 100vw;
           height: 52 / $width * 100vw;
-          font-size: 32 / $width * 100vw;
+          font-size: 34 / $width * 100vw;
           line-height: 1.05;
           margin-top: 40 / $width * 100vw;
         }
         &__paragraph {
-          height: 169 / $width * 100vw;
+          height: 189 / $width * 100vw;
           width: 535 / $width * 100vw;
           margin-bottom: 10 / $width * 100vw;
           &__description {
-            font-size: 14 / $width * 100vw;
-            line-height: 1.6;
+            font-size: 18 / $width * 100vw;
+            line-height: 1.8;
             margin-bottom: 10 / $width * 100vw;
             span {
-              font-size: 14 / $width * 100vw;
+              font-size: 16 / $width * 100vw;
             }
           }
         }
@@ -1931,9 +1941,9 @@
 
       &__text {
         max-width: 560 / $width * 100vw;
-        height: 144 / $width * 100vw;
+        height: 184 / $width * 100vw;
         margin-bottom: 10 / $width * 100vw;
-        font-size: 16 / $width * 100vw;
+        font-size: 18 / $width * 100vw;
         line-height: 28 / $width * 100vw;
         letter-spacing: 0 / $width * 100vw;
         text-shadow: 0 / $width * 100vw 0 / $width * 100vw 4 / $width * 100vw
@@ -2129,12 +2139,16 @@
     &__wrapper-top {
       padding: 20 / $width * 100vw 0 0;
       &__row {
+        display: flex;
+        text-align: center;
+        justify-content: center;
         background-color: #0f13d4;
         padding-bottom: 20 / $width * 100vw;
         max-width: 490 / $width * 100vw;
         margin: 0 auto;
         &__adress,
         &__work-time {
+          display: none;
           font-size: 12 / $width * 100vw;
           line-height: 18 / $width * 100vw;
         }
@@ -2149,6 +2163,7 @@
           width: 179 / $width * 100vw;
           &__telephone,
           &__telephone a {
+            display: none;
             margin-top: 6 / $width * 100vw;
             font-size: 16 / $width * 100vw;
             line-height: 22 / $width * 100vw;
@@ -2156,14 +2171,14 @@
         }
         &__logo {
           img {
-            height: 59 / $width * 100vw;
-            width: 140 / $width * 100vw;
+            height: 80 / $width * 100vw;
+            width: 180 / $width * 100vw;
           }
           p {
             margin-top: 17 / $width * 100vw;
-            height: 14 / $width * 100vw;
-            width: 296 / $width * 100vw;
-            font-size: 12 / $width * 100vw;
+            height: 22 / $width * 100vw;
+            width: 380 / $width * 100vw;
+            font-size: 14 / $width * 100vw;
             line-height: 14.09 / $width * 100vw;
           }
         }
@@ -2285,10 +2300,10 @@
     &__text-box {
       padding: 0 auto;
       &__primary {
-        height: 70 / $width * 100vw;
+        height: 90 / $width * 100vw;
         width: 490 / $width * 100vw;
         line-height: 39 / $width * 100vw;
-        font-size: 32 / $width * 100vw;
+        font-size: 34 / $width * 100vw;
         //margin-left: 35 / $width * 100vw;
         margin-top: 20 / $width * 100vw;
         margin-bottom: 5 / $width * 100vw;
@@ -2302,13 +2317,13 @@
         margin-top: 10 / $width * 100vwx;
       }
       &__description {
-        height: 98 / $width * 100vw;
+        height: 180 / $width * 100vw;
         width: 490 / $width * 100vw;
         //margin-left: 35 / $width * 100vw;
         margin-bottom: 20 / $width * 100vw;
         margin-top: 5 / $width * 100vw;
-        font-size: 12 / $width * 100vw;
-        line-height: 18 / $width * 100vw;
+        font-size: 18 / $width * 100vw;
+        line-height: 24 / $width * 100vw;
       }
       &__btn {
         //margin-left: 35 / $width * 100vw;
@@ -2350,13 +2365,12 @@
         line-height: 1.05;
       }
       &__second {
-        background-color: #341292;
-        height: 96 / $width * 100vw;
+        height: 140 / $width * 100vw;
         width: 480 / $width * 100vw;
-        font-size: 12 / $width * 100vw;
+        font-size: 18 / $width * 100vw;
         margin-top: 15 / $width * 100vw;
         margin-bottom: 30 / $width * 100vw;
-        line-height: 20 / $width * 100vw;
+        line-height: 28 / $width * 100vw;
       }
     }
     &__gallery {
@@ -2380,7 +2394,7 @@
           &__tag {
             height: 30 / $width * 100vw;
             width: 189 / $width * 100vw;
-            font-size: 12 / $width * 100vw;
+            font-size: 16 / $width * 100vw;
             line-height: 20 / $width * 100vw;
           }
           img {
@@ -2404,20 +2418,20 @@
         &__primary {
           width: 490 / $width * 100vw;
           height: 32 / $width * 100vw;
-          font-size: 32 / $width * 100vw;
+          font-size: 34 / $width * 100vw;
           line-height: 1.05;
           margin-top: 40 / $width * 100vw;
         }
         &__paragraph {
-          height: 139 / $width * 100vw;
+          height: 180 / $width * 100vw;
           width: 490 / $width * 100vw;
           margin-bottom: 10 / $width * 100vw;
           &__description {
-            font-size: 14 / $width * 100vw;
-            line-height: 1.6;
+            font-size: 18 / $width * 100vw;
+            line-height: 1.8;
             margin-bottom: 10 / $width * 100vw;
             span {
-              font-size: 14 / $width * 100vw;
+              font-size: 16 / $width * 100vw;
             }
           }
         }
@@ -2476,7 +2490,7 @@
       border-radius: 10 / $width * 100vw;
       h3 {
         margin-top: 30 / $width * 100vw;
-        font-size: 18 / $width * 100vw;
+        font-size: 22 / $width * 100vw;
         line-height: 30 / $width * 100vw;
         margin-bottom: 25 / $width * 100vw;
       }
@@ -2500,8 +2514,8 @@
       margin-left: 30 / $width * 100vw;
       margin-right: 30 / $width * 100vw;
       p {
-        font-size: 12 / $width * 100vw;
-        line-height: 18 / $width * 100vw;
+        font-size: 16 / $width * 100vw;
+        line-height: 22 / $width * 100vw;
       }
     }
     &__price {
@@ -2582,7 +2596,7 @@
         max-width: 430 / $width * 100vw;
         height: 184 / $width * 100vw;
         margin-bottom: 10 / $width * 100vw;
-        font-size: 16 / $width * 100vw;
+        font-size: 18 / $width * 100vw;
         line-height: 28 / $width * 100vw;
         letter-spacing: 0 / $width * 100vw;
         text-shadow: 0 / $width * 100vw 0 / $width * 100vw 4 / $width * 100vw
