--- a/scss/main.scss
+++ b/scss/main.scss
@@ -993,3 +993,36 @@ img[name="close-outline"] {
     }
   }
 }
+
+///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*Scroll back to top*/
+
+.back-top {
+  display: none;
+  position: fixed;
+  right: 20 / $width * 100vw;
+  bottom: 60 / $width * 100vw;
+  width: 50 / $width * 100vw;
+  height: 50 / $width * 100vw;
+  background-color: rgba(56, 102, 65, 0.448);
+  border-radius: 5 / $width * 100vw;
+  transition: 0.3s;
+
+  &:hover {
+    background-color: rgba(56, 102, 65, 0.948);
+  }
+
+  a {
+    opacity: 0.4;
+    transition: 0.3s;
+    display: flex;
+    justify-content: center;
+
+    &:hover {
+      opacity: 1;
+    }
+    img {
+      height: 40 / $width * 100vw;
+      width: 40 / $width * 100vw;
+    }
+  }
+}
