--- a/scss/queries.scss
+++ b/scss/queries.scss
@@ -96,7 +96,7 @@
           width: 200 / $width * 100vw;
           margin-top: 0;
           padding: 4 / $width * 100vw 20 / $width * 100vw;
-          transform: translate(-20 / $width * 100vw, 40 / $width * 100vw);
+          //transform: translate(-20 / $width * 100vw, 40 / $width * 100vw);
           border-radius: 5 / $width * 100vw;
 
           &__child {
@@ -719,7 +719,7 @@
           width: 200 / $width * 100vw;
           margin-top: 0;
           padding: 4 / $width * 100vw 20 / $width * 100vw;
-          transform: translate(-20 / $width * 100vw, 40 / $width * 100vw);
+          //transform: translate(-20 / $width * 100vw, 40 / $width * 100vw);
           border-radius: 5 / $width * 100vw;
 
           &__child {
@@ -1345,7 +1345,7 @@
           background-color: rgb(56, 102, 65);
           display: none;
           padding: 4 / $width * 100vw 20 / $width * 100vw;
-          transform: translate(150 / $width * 100vw, 10 / $width * 100vw);
+          //transform: translate(150 / $width * 100vw, 10 / $width * 100vw);
           border-radius: 5 / $width * 100vw;
 
           &__child {
@@ -1539,7 +1539,7 @@
           width: 200 / $width * 100vw;
           margin-top: 0;
           padding: 4 / $width * 100vw 20 / $width * 100vw;
-          transform: translate(-20 / $width * 100vw, 40 / $width * 100vw);
+          //transform: translate(-20 / $width * 100vw, 40 / $width * 100vw);
           border-radius: 5 / $width * 100vw;
 
           &__child {
@@ -2190,7 +2190,7 @@
           width: 200 / $width * 100vw;
           margin-top: 0;
           padding: 4 / $width * 100vw 20 / $width * 100vw;
-          transform: translate(-20 / $width * 100vw, 40 / $width * 100vw);
+          //transform: translate(-20 / $width * 100vw, 40 / $width * 100vw);
           border-radius: 5 / $width * 100vw;
 
           &__child {
