--- a/scss/main.scss
+++ b/scss/main.scss
@@ -175,7 +175,7 @@ button a {
         background-color: rgba(56, 102, 65, 0.795);
         display: none;
         padding: 4 / $width * 100vw 20 / $width * 100vw;
-        transform: translate(-20 / $width * 100vw, 40 / $width * 100vw);
+        //transform: translate(-20 / $width * 100vw, 40 / $width * 100vw);
         border-radius: 5 / $width * 100vw;
 
         &__child {
