--- a/styles/main.css
+++ b/styles/main.css
@@ -10,6 +10,7 @@ body {
   font-weight: 400;
   color: #555;
   overflow-x: hidden;
+  position: relative;
 }
 
 .container-min {
@@ -479,6 +480,7 @@ img[name=close-outline] {
   padding: 0.8854166667vw 2.5520833333vw 0.8854166667vw 2.5vw;
 }
 .section-video .video__img-box__video-img {
+  position: relative;
   height: 15.3645833333vw;
   width: 27.34375vw;
   border: 1.0416666667vw solid white;
@@ -492,6 +494,45 @@ img[name=close-outline] {
   right: 32.8125vw;
   height: 2.5vw;
   width: 1.9791666667vw;
+}
+
+.popup {
+  display: none;
+}
+.popup__body {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 100vh;
+  background-color: rgba(0, 0, 0, 0.9);
+  z-index: 1500;
+}
+.popup__youtube {
+  flex-grow: 1;
+  margin: 1.3020833333vw;
+  padding: 2.34375vw 0;
+  position: relative;
+}
+.popup__youtube iframe {
+  aspect-ratio: 16/9;
+  width: 100%;
+  height: 100%;
+}
+.popup__youtube a {
+  text-decoration: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: block;
+  padding-left: 1.5625vw;
+  background: url("../images/close-outline.svg") no-repeat left center;
+  filter: brightness(0) invert(10);
+  background-size: 1.5625vw;
+  color: #fff;
 }
 
 /**********FAVORITES ****************/
