--- a/scss/main.scss
+++ b/scss/main.scss
@@ -402,6 +402,7 @@ img[name="close-outline"] {
       font-weight: 500;
     }
   }
+  /*
   &__gallery {
     display: grid;
     grid-template-columns: 285 / $width * 100vw 285 / $width * 100vw 285 / $width * 100vw 285 / $width * 100vw;
@@ -411,10 +412,11 @@ img[name="close-outline"] {
     &__transform {
       height: 260 / $width * 100vw;
       width: 285 / $width * 100vw;
-      display: block;
-      transition: all 0.4s;
+      //display: block;
+      //transition: all 0.4s;
       &__item {
         overflow: hidden;
+
         img {
           height: 200 / $width * 100vw;
           width: 285 / $width * 100vw;
@@ -436,7 +438,7 @@ img[name="close-outline"] {
         padding-right: 23 / $width * 100vw;
         transition: 0.5s;
         background-color: white;
-        transition: all 0.4s;
+        //transition: all 0.4s;
         &__tag {
           height: 30 / $width * 100vw;
           width: 189 / $width * 100vw;
@@ -454,8 +456,62 @@ img[name="close-outline"] {
         }
       }
     }
+  }*/
+  .services__gallery {
+    display: grid;
+    grid-template-columns: 285 / $width * 100vw 285 / $width * 100vw 285 / $width * 100vw 285 / $width * 100vw;
+    gap: 20 / $width * 100vw 10 / $width * 100vw;
+    padding-bottom: 92 / $width * 100vw;
+  }
+
+  .card {
+    &__item {
+      width: 285 / $width * 100vw;
+      min-height: 260 / $width * 100vw;
+      overflow: hidden;
+      background: #fff;
+      box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.15);
+      border-radius: 10 / $width * 100vw;
+    }
+    &__img {
+      width: 285 / $width * 100vw;
+      height: 200 / $width * 100vw;
+      border-radius: 10 / $width * 100vw;
+      overflow: hidden;
+
+      img {
+        width: 285 / $width * 100vw;
+        height: 200 / $width * 100vw;
+        object-fit: cover;
+        border-radius: 10 / $width * 100vw;
+        transition: 0.5s;
+      }
+      img:hover {
+        transform: scale(1.1);
+      }
+    }
+    &__content {
+      min-height: 60px;
+      padding: 0 44 / $width * 100vw 0 20 / $width * 100vw;
+      display: flex;
+      align-items: center;
+      background: url("../images/icons/white-button.png") no-repeat right 20 /
+        $width * 100vw center;
+      transition: 0.5s;
+      position: relative;
+
+      a {
+        text-decoration: none;
+        display: block;
+        font-weight: 700;
+        font-size: 18 / $width * 100vw;
+        line-height: 30 / $width * 100vw;
+        color: #202020;
+      }
+    }
   }
 }
+
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 /**********VIDEO****************/
 .section-video {
@@ -475,12 +531,14 @@ img[name="close-outline"] {
         height: 52 / $width * 100vw;
         font-size: 44 / $width * 100vw;
         line-height: 1.05;
-        margin-top: 90 / $width * 100vw;
+        margin-top: 40 / $width * 100vw;
+        margin-bottom: 18 / $width * 100vw;
       }
       &__paragraph {
         height: 169 / $width * 100vw;
         width: 535 / $width * 100vw;
-        margin-bottom: 30 / $width * 100vw;
+        margin-top: 10 / $width * 100vw;
+        //margin-bottom: 30 / $width * 100vw;
         &__description {
           font-size: 18 / $width * 100vw;
           line-height: 1.6;
@@ -496,7 +554,8 @@ img[name="close-outline"] {
         }
       }
       &__btn {
-        margin-bottom: 90 / $width * 100vw;
+        margin-bottom: 40 / $width * 100vw;
+        margin-top: 40px;
         padding: 17 / $width * 100vw 49 / $width * 100vw 17 / $width * 100vw 48 /
           $width * 100vw;
       }
@@ -581,7 +640,7 @@ img[name="close-outline"] {
   }
 
   &__box {
-    padding: 60 / $width * 100vw 0 80 / $width * 100vw 0;
+    padding: 60 / $width * 100vw 0 60 / $width * 100vw 0;
     text-align: center;
     width: 1170 / $width * 100vw;
     height: 413 / $width * 100vw;
@@ -606,7 +665,7 @@ img[name="close-outline"] {
     border-radius: 10 / $width * 100vw;
     transition: 0.7s;
     h3 {
-      margin-top: 30 / $width * 100vw;
+      margin-top: 20 / $width * 100vw;
       font-weight: 700;
       font-size: 22 / $width * 100vw;
       line-height: 30 / $width * 100vw;
@@ -709,8 +768,9 @@ img[name="close-outline"] {
   &__body {
     position: relative;
     margin: 0 auto;
-    padding: 60 / $width * 100vw 0;
-    align-self: center;
+    margin-top: 20px;
+    padding: 47 / $width * 100vw 0;
+    align-self: flex-start;
     color: #fff;
   }
 }
@@ -730,7 +790,7 @@ img[name="close-outline"] {
       width: 358 / $width * 100vw;
       margin-bottom: 40 / $width * 100vw;
       display: flex;
-      justify-content: center;
+      justify-content: start;
       align-items: flex-start;
       &__img {
         margin: 0 auto;
@@ -896,7 +956,7 @@ img[name="close-outline"] {
 /**********FOOTER ****************/
 .footer {
   background: #fff;
-  margin-top: 47 / $width * 100vw;
+  margin-top: 38 / $width * 100vw;
 
   &__widgets {
     display: flex;
