--- a/scss/queries.scss
+++ b/scss/queries.scss
@@ -2271,9 +2271,10 @@
     &__img-box {
       margin-top: 20 / $width * 100vw;
       margin-left: 30 / $width * 100vw;
+      margin-right: 30 / $width * 100vw;
       &__img {
         object-fit: cover;
-        width: 520 / $width * 100vw;
+        width: 490 / $width * 100vw;
         height: 400 / $width * 100vw;
       }
     }
@@ -2350,16 +2351,16 @@
       }
     }
     &__gallery {
-      grid-template-columns: 245 / $width * 100vw 245 / $width * 100vw;
+      grid-template-columns: 490 / $width * 100vw;
       justify-content: space-between;
       padding-bottom: 52 / $width * 100vw;
       &__transform {
-        height: 220 / $width * 100vw;
-        width: 245 / $width * 100vw;
+        height: 320 / $width * 100vw;
+        width: 390 / $width * 100vw;
         &__item {
           img {
-            height: 180 / $width * 100vw;
-            width: 245 / $width * 100vw;
+            height: 280 / $width * 100vw;
+            width: 390 / $width * 100vw;
           }
         }
         &__content {
