--- a/styles/main.css
+++ b/styles/main.css
@@ -357,6 +357,61 @@ img[name=close-outline] {
 
 .services {
   background-color: rgba(242, 248, 244, 0.884);
+  /*
+  &__gallery {
+    display: grid;
+    grid-template-columns: 285 / $width * 100vw 285 / $width * 100vw 285 / $width * 100vw 285 / $width * 100vw;
+
+    gap: 5 / $width * 100vw;
+    padding-bottom: 102 / $width * 100vw;
+    &__transform {
+      height: 260 / $width * 100vw;
+      width: 285 / $width * 100vw;
+      //display: block;
+      //transition: all 0.4s;
+      &__item {
+        overflow: hidden;
+
+        img {
+          height: 200 / $width * 100vw;
+          width: 285 / $width * 100vw;
+          display: block;
+          transition: all 0.4s;
+        }
+        img:hover {
+          transform: scale(1.1);
+        }
+      }
+      &__content {
+        font-family: Raleway;
+        color: #000;
+        height: 60 / $width * 100vw;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-left: 20 / $width * 100vw;
+        padding-right: 23 / $width * 100vw;
+        transition: 0.5s;
+        background-color: white;
+        //transition: all 0.4s;
+        &__tag {
+          height: 30 / $width * 100vw;
+          width: 189 / $width * 100vw;
+          display: block;
+          font-family: raleway;
+          font-weight: 700;
+          font-size: 18 / $width * 100vw;
+          line-height: 30 / $width * 100vw;
+          color: #202020;
+        }
+        img {
+          height: 24 / $width * 100vw;
+          width: 24 / $width * 100vw;
+          display: block;
+        }
+      }
+    }
+  }*/
 }
 .services__text-box {
   display: flex;
@@ -381,57 +436,52 @@ img[name=close-outline] {
   line-height: 1.25vw;
   font-weight: 500;
 }
-.services__gallery {
+.services .services__gallery {
   display: grid;
   grid-template-columns: 14.84375vw 14.84375vw 14.84375vw 14.84375vw;
-  gap: 0.2604166667vw;
-  padding-bottom: 5.3125vw;
+  gap: 1.0416666667vw 0.5208333333vw;
+  padding-bottom: 4.7916666667vw;
 }
-.services__gallery__transform {
-  height: 13.5416666667vw;
+.services .card__item {
   width: 14.84375vw;
-  display: block;
-  transition: all 0.4s;
+  min-height: 13.5416666667vw;
+  overflow: hidden;
+  background: #fff;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.15);
+  border-radius: 0.5208333333vw;
 }
-.services__gallery__transform__item {
+.services .card__img {
+  width: 14.84375vw;
+  height: 10.4166666667vw;
+  border-radius: 0.5208333333vw;
   overflow: hidden;
 }
-.services__gallery__transform__item img {
-  height: 10.4166666667vw;
+.services .card__img img {
   width: 14.84375vw;
-  display: block;
-  transition: all 0.4s;
+  height: 10.4166666667vw;
+  object-fit: cover;
+  border-radius: 0.5208333333vw;
+  transition: 0.5s;
 }
-.services__gallery__transform__item img:hover {
+.services .card__img img:hover {
   transform: scale(1.1);
 }
-.services__gallery__transform__content {
-  font-family: Raleway;
-  color: #000;
-  height: 3.125vw;
+.services .card__content {
+  min-height: 60px;
+  padding: 0 2.2916666667vw 0 1.0416666667vw;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding-left: 1.0416666667vw;
-  padding-right: 1.1979166667vw;
+  background: url("../images/icons/white-button.png") no-repeat right 1.0416666667vw center;
   transition: 0.5s;
-  background-color: white;
-  transition: all 0.4s;
+  position: relative;
 }
-.services__gallery__transform__content__tag {
-  height: 1.5625vw;
-  width: 9.84375vw;
+.services .card__content a {
+  text-decoration: none;
   display: block;
-  font-family: raleway;
   font-weight: 700;
   font-size: 0.9375vw;
   line-height: 1.5625vw;
   color: #202020;
-}
-.services__gallery__transform__content img {
-  height: 1.25vw;
-  width: 1.25vw;
-  display: block;
 }
 
 /**********VIDEO****************/
@@ -455,12 +505,13 @@ img[name=close-outline] {
   height: 2.7083333333vw;
   font-size: 2.2916666667vw;
   line-height: 1.05;
-  margin-top: 4.6875vw;
+  margin-top: 2.0833333333vw;
+  margin-bottom: 0.9375vw;
 }
 .section-video .video__text-box__paragraph {
   height: 8.8020833333vw;
   width: 27.8645833333vw;
-  margin-bottom: 1.5625vw;
+  margin-top: 0.5208333333vw;
 }
 .section-video .video__text-box__paragraph__description {
   font-size: 0.9375vw;
@@ -476,7 +527,8 @@ img[name=close-outline] {
   font-weight: 700;
 }
 .section-video .video__text-box__btn {
-  margin-bottom: 4.6875vw;
+  margin-bottom: 2.0833333333vw;
+  margin-top: 40px;
   padding: 0.8854166667vw 2.5520833333vw 0.8854166667vw 2.5vw;
 }
 .section-video .video__img-box__video-img {
@@ -554,7 +606,7 @@ img[name=close-outline] {
   color: #202020;
 }
 .favorites__box {
-  padding: 3.125vw 0 4.1666666667vw 0;
+  padding: 3.125vw 0 3.125vw 0;
   text-align: center;
   width: 60.9375vw;
   height: 21.5104166667vw;
@@ -581,7 +633,7 @@ img[name=close-outline] {
   transition: 0.7s;
 }
 .tree__primary h3 {
-  margin-top: 1.5625vw;
+  margin-top: 1.0416666667vw;
   font-weight: 700;
   font-size: 1.1458333333vw;
   line-height: 1.5625vw;
@@ -674,8 +726,9 @@ img[name=close-outline] {
 .reviews__body {
   position: relative;
   margin: 0 auto;
-  padding: 3.125vw 0;
-  align-self: center;
+  margin-top: 20px;
+  padding: 2.4479166667vw 0;
+  align-self: flex-start;
   color: #fff;
 }
 
@@ -696,7 +749,7 @@ img[name=close-outline] {
   width: 18.6458333333vw;
   margin-bottom: 2.0833333333vw;
   display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: flex-start;
 }
 .response__hero__head__img {
@@ -849,7 +902,7 @@ img[name=close-outline] {
 /**********FOOTER ****************/
 .footer {
   background: #fff;
-  margin-top: 2.4479166667vw;
+  margin-top: 1.9791666667vw;
 }
 .footer__widgets {
   display: flex;
