--- a/scss/main.scss
+++ b/scss/main.scss
@@ -315,14 +315,18 @@ img[name="close-outline"] {
     }
     &__tag-title {
       height: 20 / $width * 100vw;
-      width: 264 / $width * 100vw;
+      width: 294 / $width * 100vw;
       text-transform: uppercase;
       font-weight: 700;
-      font-size: 22 / $width * 100vw;
+      font-size: 20 / $width * 100vw;
       line-height: 20 / $width * 100vw;
       margin-left: 365 / $width * 100vw;
-      margin-top: 20 / $width * 100vwx;
+      margin-top: 20 / $width * 100vw;
       color: #386641;
+      span {
+        text-decoration-line: underline;
+        text-underline-offset: 11 / $width * 100vw;
+      }
     }
     &__description {
       height: 168 / $width * 100vw;
@@ -402,69 +406,17 @@ img[name="close-outline"] {
       font-weight: 500;
     }
   }
-  /*
-  &__gallery {
-    display: grid;
-    grid-template-columns: 285 / $width * 100vw 285 / $width * 100vw 285 / $width * 100vw 285 / $width * 100vw;
 
-    gap: 5 / $width * 100vw;
-    padding-bottom: 102 / $width * 100vw;
-    &__transform {
-      height: 260 / $width * 100vw;
-      width: 285 / $width * 100vw;
-      //display: block;
-      //transition: all 0.4s;
-      &__item {
-        overflow: hidden;
-
-        img {
-          height: 200 / $width * 100vw;
-          width: 285 / $width * 100vw;
-          display: block;
-          transition: all 0.4s;
-        }
-        img:hover {
-          transform: scale(1.1);
-        }
-      }
-      &__content {
-        font-family: Raleway;
-        color: #000;
-        height: 60 / $width * 100vw;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding-left: 20 / $width * 100vw;
-        padding-right: 23 / $width * 100vw;
-        transition: 0.5s;
-        background-color: white;
-        //transition: all 0.4s;
-        &__tag {
-          height: 30 / $width * 100vw;
-          width: 189 / $width * 100vw;
-          display: block;
-          font-family: raleway;
-          font-weight: 700;
-          font-size: 18 / $width * 100vw;
-          line-height: 30 / $width * 100vw;
-          color: #202020;
-        }
-        img {
-          height: 24 / $width * 100vw;
-          width: 24 / $width * 100vw;
-          display: block;
-        }
-      }
+  .services {
+    &__gallery {
+      display: grid;
+      grid-template-columns: 285 / $width * 100vw 285 / $width * 100vw 285 / $width * 100vw 285 / $width * 100vw;
+      gap: 20 / $width * 100vw 10 / $width * 100vw;
+      padding-bottom: 92 / $width * 100vw;
     }
-  }*/
-  .services__gallery {
-    display: grid;
-    grid-template-columns: 285 / $width * 100vw 285 / $width * 100vw 285 / $width * 100vw 285 / $width * 100vw;
-    gap: 20 / $width * 100vw 10 / $width * 100vw;
-    padding-bottom: 92 / $width * 100vw;
   }
 
-  .card {
+  .gallery {
     &__item {
       width: 285 / $width * 100vw;
       min-height: 260 / $width * 100vw;
@@ -491,7 +443,7 @@ img[name="close-outline"] {
       }
     }
     &__content {
-      min-height: 60px;
+      height: 60 / $width * 100vw;
       padding: 0 44 / $width * 100vw 0 20 / $width * 100vw;
       display: flex;
       align-items: center;
@@ -502,7 +454,10 @@ img[name="close-outline"] {
 
       a {
         text-decoration: none;
+        height: 30 / $width * 100vw;
+        width: 189 / $width * 100vw;
         display: block;
+        font-family: raleway;
         font-weight: 700;
         font-size: 18 / $width * 100vw;
         line-height: 30 / $width * 100vw;
