--- a/styles/main.css
+++ b/styles/main.css
@@ -299,14 +299,18 @@ img[name=close-outline] {
 }
 .hero__text-box__tag-title {
   height: 1.0416666667vw;
-  width: 13.75vw;
+  width: 15.3125vw;
   text-transform: uppercase;
   font-weight: 700;
-  font-size: 1.1458333333vw;
+  font-size: 1.0416666667vw;
   line-height: 1.0416666667vw;
   margin-left: 19.0104166667vw;
-  margin-top: 1.0416666667vwx;
+  margin-top: 1.0416666667vw;
   color: #386641;
+}
+.hero__text-box__tag-title span {
+  text-decoration-line: underline;
+  text-underline-offset: 0.5729166667vw;
 }
 .hero__text-box__description {
   height: 8.75vw;
@@ -357,61 +361,6 @@ img[name=close-outline] {
 
 .services {
   background-color: rgba(242, 248, 244, 0.884);
-  /*
-  &__gallery {
-    display: grid;
-    grid-template-columns: 285 / $width * 100vw 285 / $width * 100vw 285 / $width * 100vw 285 / $width * 100vw;
-
-    gap: 5 / $width * 100vw;
-    padding-bottom: 102 / $width * 100vw;
-    &__transform {
-      height: 260 / $width * 100vw;
-      width: 285 / $width * 100vw;
-      //display: block;
-      //transition: all 0.4s;
-      &__item {
-        overflow: hidden;
-
-        img {
-          height: 200 / $width * 100vw;
-          width: 285 / $width * 100vw;
-          display: block;
-          transition: all 0.4s;
-        }
-        img:hover {
-          transform: scale(1.1);
-        }
-      }
-      &__content {
-        font-family: Raleway;
-        color: #000;
-        height: 60 / $width * 100vw;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding-left: 20 / $width * 100vw;
-        padding-right: 23 / $width * 100vw;
-        transition: 0.5s;
-        background-color: white;
-        //transition: all 0.4s;
-        &__tag {
-          height: 30 / $width * 100vw;
-          width: 189 / $width * 100vw;
-          display: block;
-          font-family: raleway;
-          font-weight: 700;
-          font-size: 18 / $width * 100vw;
-          line-height: 30 / $width * 100vw;
-          color: #202020;
-        }
-        img {
-          height: 24 / $width * 100vw;
-          width: 24 / $width * 100vw;
-          display: block;
-        }
-      }
-    }
-  }*/
 }
 .services__text-box {
   display: flex;
@@ -442,7 +391,7 @@ img[name=close-outline] {
   gap: 1.0416666667vw 0.5208333333vw;
   padding-bottom: 4.7916666667vw;
 }
-.services .card__item {
+.services .gallery__item {
   width: 14.84375vw;
   min-height: 13.5416666667vw;
   overflow: hidden;
@@ -450,24 +399,24 @@ img[name=close-outline] {
   box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.15);
   border-radius: 0.5208333333vw;
 }
-.services .card__img {
+.services .gallery__img {
   width: 14.84375vw;
   height: 10.4166666667vw;
   border-radius: 0.5208333333vw;
   overflow: hidden;
 }
-.services .card__img img {
+.services .gallery__img img {
   width: 14.84375vw;
   height: 10.4166666667vw;
   object-fit: cover;
   border-radius: 0.5208333333vw;
   transition: 0.5s;
 }
-.services .card__img img:hover {
+.services .gallery__img img:hover {
   transform: scale(1.1);
 }
-.services .card__content {
-  min-height: 60px;
+.services .gallery__content {
+  height: 3.125vw;
   padding: 0 2.2916666667vw 0 1.0416666667vw;
   display: flex;
   align-items: center;
@@ -475,9 +424,12 @@ img[name=close-outline] {
   transition: 0.5s;
   position: relative;
 }
-.services .card__content a {
+.services .gallery__content a {
   text-decoration: none;
+  height: 1.5625vw;
+  width: 9.84375vw;
   display: block;
+  font-family: raleway;
   font-weight: 700;
   font-size: 0.9375vw;
   line-height: 1.5625vw;
